--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <link rel="stylesheet" href="public/style.css">
     <script src="http://code.jquery.com/jquery-1.6.2.js"></script>
     <script src="public/move.js"></script>
-    <script src="public/tools.js"></script>
+    <!-- <script src="public/tools.js"></script> -->
     <script src="public/game.js"></script>
   </head>
   <body>
@@ -15,6 +15,22 @@
     <div id="bird-1" class="bird"></div>
     <div id="bird-2" class="bird"></div>
     <div id="bird-3" class="bird"></div>
+    <div class="bird"></div>
+    <div class="bird"></div>
+    <div class="bird"></div>
+    <div class="bird"></div>
+    <div class="bird"></div>
+    <div class="bird"></div>
+    <div class="bird"></div>
+    <div class="bird"></div>
+    <div class="bird"></div>
+    <div class="bird"></div>
+    <div class="bird"></div>
+    <div class="bird"></div>
+    <div class="bird"></div>
+    <div class="bird"></div>
+    <div class="bird"></div>
+    <div class="bird"></div>
     <div id="grass-1" class="grass"></div>
     <div id="grass-2" class="grass"></div>
     <div id="grass-3" class="grass"></div>
