--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
     <div class="bird"></div>
     <div class="bird"></div>
     <div class="bird"></div>
+    <div class="bird"></div>
+    <div class="bird"></div>
     <div id="grass-1" class="grass"></div>
     <div id="grass-2" class="grass"></div>
     <div id="grass-3" class="grass"></div>
