--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <link rel="stylesheet" href="public/style.css">
     <script src="http://code.jquery.com/jquery-1.6.2.js"></script>
     <script src="public/move.js"></script>
-    <!-- <script src="public/tools.js"></script> -->
+    <script src="public/tools.js"></script>
     <script src="public/game.js"></script>
   </head>
   <body>
