--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
       <div id="guy-eye-right-bounds"><div id="guy-eye-right"></div></div>
       <div id="guy-shadow"></div>
     </div>
+    <div id="cat_box"></div>
     <div id="cat"></div>
   </body>
 </html>
