--- a/index.html
+++ b/index.html
@@ -1,6 +1,20 @@
 <html>
   <head>
     <title>Game Prototypes</title>
+    <style>
+      body {
+        padding: 50px;
+        font: 14px "helvetica neue", helvetica, arial, sans-serif;
+      }
+      a {
+        color: #02AEE2;
+        text-decoration: none;
+      }
+      a:hover {
+        color: #0EC7FF;
+        text-decoration: underline;
+      }
+    </style>
   </head>
   <body>
     <h1>Game Prototypes</h1>
