--- a/index.html
+++ b/index.html
@@ -18,6 +18,6 @@
   </head>
   <body>
     <h1>Game Prototypes</h1>
-    <a href="/character/index.html">Character</a>
+    <a href="character/index.html">Character</a>
   </body>
 </html>
