--- a/character/index.html
+++ b/character/index.html
@@ -6,6 +6,7 @@
     <script src="public/move.js"></script>
     <!-- <script src="public/tools.js"></script> -->
     <script src="public/game.js"></script>
+    <script src="public/preload.js"></script>
   </head>
   <body>
     <div id="help">
