--- a/character/index.html
+++ b/character/index.html
@@ -2,6 +2,7 @@
   <head>
     <title>Character Prototype</title>
     <link rel="stylesheet" href="public/style.css">
+    <link rel="stylesheet" href="public/preload.css">
     <script src="http://code.jquery.com/jquery-1.6.2.js"></script>
     <script src="public/move.js"></script>
     <!-- <script src="public/tools.js"></script> -->
