--- a/character/index.html
+++ b/character/index.html
@@ -2,9 +2,9 @@
   <head>
     <title>Character Prototype</title>
     <link rel="stylesheet" href="public/style.css">
-    <link rel="stylesheet" href="../common//preload.css">
+    <link rel="stylesheet" href="../common/preload.css">
     <script src="http://code.jquery.com/jquery-1.6.2.js"></script>
-    <script src="public/move.js"></script>
+    <script src="../common/move.js"></script>
     <!-- <script src="public/tools.js"></script> -->
     <script src="public/game.js"></script>
     <script src="../common/preload.js"></script>
