styling guy parts

--- a/particles/index.html
+++ b/particles/index.html
@@ -9,6 +9,11 @@
     <!--<script src="../common/preload.js"></script>-->
   </head>
   <body>
-    
+    <div id="balloons"></div>
+    <div id="guy">
+      <div id="guy-head"></div>
+      <div id="guy-arm-left"></div>
+      <div id="guy-arm-right"></div>
+    </div>
   </body>
 </html>
