--- a/particles/index.html
+++ b/particles/index.html
@@ -15,5 +15,6 @@
       <div id="guy-arm-left"></div>
       <div id="guy-arm-right"></div>
     </div>
+    <div id="grass"></div>
   </body>
 </html>
