--- a/particles/index.html
+++ b/particles/index.html
@@ -14,6 +14,7 @@
       <div id="guy-head"></div>
       <div id="guy-arm-left"></div>
       <div id="guy-arm-right"></div>
+      <div id="guy-shadow"></div>
     </div>
     <div id="grass"></div>
   </body>
