--- a/index.html
+++ b/index.html
@@ -19,5 +19,6 @@
   <body>
     <h1>Game Prototypes</h1>
     <a href="character/index.html">Character</a>
+    <a href="particles/index.html">Rain & Balloon Guy</a>
   </body>
 </html>
