--- a/index.html
+++ b/index.html
@@ -18,7 +18,9 @@
   </head>
   <body>
     <h1>Game Prototypes</h1>
-    <a href="character/index.html">Character</a>
-    <a href="particles/index.html">Rain & Balloon Guy</a>
+    <ul>
+      <li><a href="character/index.html">Character</a></li>
+      <li><a href="particles/index.html">Rain & Balloon Guy</a></li>
+    </ul>
   </body>
 </html>
