--- a/particles/index.html
+++ b/particles/index.html
@@ -6,7 +6,7 @@
     <script src="http://code.jquery.com/jquery-1.6.2.js"></script>
     <script src="../common/move.js"></script>
     <script src="public/game.js"></script>
-    <!--<script src="../common/preload.js"></script>-->
+    <script src="../common/preload.js"></script>
   </head>
   <body>
     <div id="balloons"></div>
