renamed to rain

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <h1>Game Prototypes</h1>
     <ul>
       <li><a href="character/index.html">Character</a></li>
-      <li><a href="particles/index.html">Rain & Balloon Guy</a></li>
+      <li><a href="rain/index.html">Rain & Balloon Guy</a></li>
     </ul>
   </body>
 </html>
