--- a/rain/index.html
+++ b/rain/index.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <title>Particles</title>
+    <title>Rain</title>
     <link rel="stylesheet" href="public/style.css">
     <link rel="stylesheet" href="../common/preload.css">
     <script src="http://code.jquery.com/jquery-1.6.2.js"></script>
