--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <ul>
       <li><a href="character/index.html">Character</a></li>
       <li><a href="rain/index.html">Rain & Balloon Guy</a></li>
-      <li><a href="parallax/index.html">Parallax forest</a></li>
+      <li><a href="parallax-forest/index.html">Parallax forest</a></li>
     </ul>
   </body>
 </html>
